messagepack-derive-test/tests/fail/tuple_as_map.rs
use messagepack_derive::{Decode, Encode};

#[derive(Encode, Decode)]
#[msgpack(map)]
struct TupleAsMap(String, u8);

fn main() {}
