messagepack-derive-test/tests/fail/tuple_as_map.stderr
error: tuple structs cannot use `#[msgpack(map)]`
 --> tests/fail/tuple_as_map.rs:3:10
  |
3 | #[derive(Encode, Decode)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs cannot use `#[msgpack(map)]`
 --> tests/fail/tuple_as_map.rs:3:18
  |
3 | #[derive(Encode, Decode)]
  |                  ^^^^^^
  |
  = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)
